cluster/apps/default/echo/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - echo1.kochhaus.net
    - echo2.kochhaus.net
  rules:
  - host: echo1.kochhaus.net
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.kochhaus.net
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
